API Productos + coneccion con base de datos RENDER

--- a/backOfficeWeb/src/main/resources/application.properties
+++ b/backOfficeWeb/src/main/resources/application.properties
@@ -3,15 +3,16 @@ server.port=8084
 server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto= update
 
-#spring.datasource.url=jdbc:postgresql://marcoro:TOz1Pu5RkBAthmY09rr3X5MD538ai7jN@dpg-cquj5caj1k6c73b5kdjg-a.oregon-postgres.render.com/coffedb_5utg
-#spring.datasource.username=marcoro
-#spring.datasource.password=TOz1Pu5RkBAthmY09rr3X5MD538ai7jN
+#spring.datasource.url=jdbc:postgresql://dpg-crlklmtumphs73e93gdg-a.oregon-postgres.render.com/coffe
+#spring.datasource.username=coffe
+#spring.datasource.password=pWIuqYOa2ReI698HRfBNH0tURP834eOt
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.profiles.active=marcoro10
 
 spring.datasource.url=jdbc:postgresql://192.168.201.40:5432/postgres
 spring.datasource.username=marcoro
 spring.datasource.password=4708
 spring.profiles.active=marcoro10
-
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Security
