--- a/backOfficeWeb/pom.xml
+++ b/backOfficeWeb/pom.xml
@@ -39,7 +39,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.upb.toffi.Application</mainClass>
+                    <mainClass>com.upb.toffi.ToffiApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
