Fix: WAREHOUSE Y PRODUCTS

--- a/backOfficeWeb/src/main/resources/application.properties
+++ b/backOfficeWeb/src/main/resources/application.properties
@@ -25,3 +25,5 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
+logging.level.root=INFO
+
